# rmind

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .typos.toml  .yamlfmt.yaml  CLAUDE.md  Dockerfile  Dockerfile.gpu  EXPORT_DECODE_STRATEGIES.md  LICENSE  README.md  TODO.md  build-index.py  chown_docker_volumes.sh  commands.sh  convert_to_onnx.py  dataviz.py  docker-compose.yml  dvc.gcp.yaml  dvc.yaml  entrypoint.sh  flake.nix  flow_action_expert_improvements.md  flow_action_expert_rescue_plan.md  justfile  luts_gkzgn6gk.pt  luts_y74asdtd.pt  make_docker_volumes.sh  parse_args.sh  predict.py  prek.toml  pyproject.toml  search-index.py  smoke_foresight_readout.py  todo.md  train.py  vis-attention-maps.ipynb  vis-grad-cam.ipynb  vis_debug.py
.circleci/: config.yml
.dvc/: config
.github/workflows/: ci.yaml  release.yaml
cargpt/: __init__.py  layers.py
cargpt/callbacks/: __init__.py  embedding_writer.py  embeddings_writer.py  model_summary.py  predictions_writer.py  rerun.py  scores.py  video_writer.py
cargpt/components/: __init__.py  attention.py  branch.py  depth.py  dino.py  dvae.py  episode.py  llm.py  loss.py  mask.py  modules.py  nn.py  norm.py  position_encoding.py  resnet.py
cargpt/components/objectives/: __init__.py  common.py  copycat.py  forward_dynamics.py  inverse_dynamics.py  memory_extraction.py  policy.py  random_masked_hindsight_control.py  scheduler.py
cargpt/components/optimizers/: selective_adamw.py
cargpt/datamodules/: __init__.py  generic.py
cargpt/models/: cilpp.py  control_transformer.py  decoding.py  encoding.py  gato.py  gato2.py  llm.py  losses.py
cargpt/norm/: __init__.py  minmaxscaler.py  scalers.py
cargpt/notebooks/: attention_visualization.ipynb
cargpt/scripts/: dataviz.py  train.py
cargpt/utils/: __init__.py  _wandb.py  attention.py  attrdeleter.py  containers.py  embeddings.py  features.py  functional.py  logging.py  metabase.py  padder.py  score.py  visualization.py  wandb.py
cargpt/visualization/: __init__.py  attention_map.py  future_frames.py  trajectory.py  utils.py
cargpt/visualizations/: __init__.py
config/: benchmark_onnx.yaml  dataviz.yaml  export.yaml  export_aoti.yaml  export_onnx.yaml  label_clusters.yaml  predict.yaml  train.yaml
config/_templates/dataset/: carla.yaml  carla_garage.yaml  carla_garage_100.yaml  carla_garage_10percent.yaml  carla_garage_1percent.yaml  predict.yaml  train.fsd.yaml  train.yaml  train_nowpts.yaml  val.fsd.yaml  val.yaml
config/cluster_fn/: rule_based.yaml
config/data/: test.yaml  train.yaml
config/datamodule/: carla.yaml  carla_garage.yaml  cil.yaml  customized.yaml  default.yaml  gato.yaml  predict.yaml  predict_carla.yaml
config/datamodule/carla_garage/: predict.yaml  train.yaml
config/datamodule/yaak/: action_train.yaml  overfit.yaml  predict.yaml  predict_train.yaml  predict_train_debug.yaml  predict_val.yaml  predict_val_all.yaml  train.yaml  train_debug.yaml  train_noimg.yaml  train_pilot.yaml  train_pilot_strat.yaml  train_small.yaml
config/dataset/: carla.yaml  predict.yaml  train-tiny.yaml  train.fsd.yaml  train.yaml  val-tiny.yaml  val.fsd.yaml  val.yaml
config/dataset/templates/: student.yaml  train-cil.yaml  train.yaml  val-cil.yaml  val.yaml
config/encoder/: shared.yaml
config/experiment/: cilpp.yaml  control_transformer_finetune.yaml  control_transformer_finetune_deephead.yaml  control_transformer_finetune_incidents.yaml  control_transformer_finetune_incidents_deepheads.yaml  gato.yaml  gato2.yaml  notebook.yaml  smart.yaml  smart_multigpu.yaml
config/experiment/control_transformer/: finetune.yaml  finetune_carla.yaml  finetune_wpts.yaml  pretrain.yaml  pretrain_only_depth.yaml  pretrain_with_depth.yaml
config/export/: default.yaml  onnx.yaml  onnx_cache.yaml  onnx_cache_incremental.yaml  onnx_dynamic.yaml  policy_onnx.yaml  verify_dual_onnx.yaml  verify_onnx_cache.yaml
config/image_encoder/: dall_e.yaml  depth.yaml  dino.yaml  resnet.yaml
config/inference/: embeddings.yaml  features.yaml  frames.yaml  gato.yaml  gato2.yaml  score.yaml  smart.yaml  trajectory.yaml  visualize.yaml
config/inference/carla_garage/: default.yaml
config/inference/control_transformer/: carla.yaml  default.yaml  embeddings.yaml
config/llm/: hf_gpt2.yaml  pytorch_gpt2.yaml  transformer_encoder.yaml  xformers_gpt2.yaml
config/model/control_transformer/: embeddings.yaml  finetuned.yaml  policy_finetune.yaml  policy_finetune_waypts.yaml  policy_finetune_wpts.yaml  pretrained.yaml  raw.yaml  raw_cg.yaml  raw_only_depth.yaml  raw_with_depth.yaml
config/paths/: default.yaml
config/resampling/: policy.yaml  pretrained.yaml
config/sensor_encoder/: mu_law.yaml
config/trainer/: default.yaml  multi_gpu.yaml
config/wandb/yaak/: rmind.yaml  (+1 more)
docker/: Dockerfile-dvc.gpu  Dockerfile.gpu
docs/: FORESIGHT_READOUT_AND_TARGET.md  INCREMENTAL_INFERENCE_REQUEST.md  ONNX_EXPORT.md  ONNX_Layer_flattening.md  model-usage.md  split_rate_sampling_plan.md
nb/: sexy.ipynb
notebooks/: ar_sanity_checks.ipynb  attention_visualization.ipynb  scores.ipynb
report/: make_figs.py  metrics.json  report.typ
reports/: LOOP_INSTRUCTIONS.md  loop_manifest.json
scripts/: build-index.py  waypoint_tokenizer.py
scripts/wp_probe/: README.md  analyze.py  run_conditions.sh
src/cargpt/: common.py
src/config/: predict.yaml  train.yaml
src/rmind/: __init__.py  config.py
tests/: conftest.py  test_action_transform.py  test_augment.py  test_benchmark_onnx_preprocessing.py  test_binning.py  test_callbacks.py  test_compile_benchmark.py  test_components.py  test_containers.py  test_export.py  test_export_cache.py  test_flow_policy.py  test_functional.py  test_invertible.py  test_joint_policy.py  test_kv_cache.py  test_lds.py  test_maneuver_weights.py  test_models.py  test_objectives.py  test_policy.py  test_policy_steering_correction.py  test_readout.py  test_training_step_snapshot.py  test_transformer_policy_head.py  update_snapshots.py
tests/scripts/: update_snapshots.py  verify_encoder_cache.py
tests/snapshots/: training_step_losses.json  training_step_losses.pt
(+447 files in other folders)
