[project]
name = "rmind"
version = "0.1.0"
description = "Foundation models for spatial intelligence"
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "ML yaak team", email = "ml@yaak.ai" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "einops>=0.8.1",
  "hydra-core>=1.3.2",
  "kornia>=0.8.2",
  "more-itertools>=10.4.0",
  "numpy>2.3.0",
  "omegaconf>=2.3.0",
  "orjson>=3.10.12",
  "polars>=1.38.0",
  "pydantic>=2.12.5",
  "pytorch-lightning>=2.6.0",
  "rbyte[geo,jpeg,yaak]==0.34.6",
  "structlog>=25.2.0",
  "tensordict>=0.11.0",
  "timm>=1.0.22",
  "torch>=2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
]

[project.urls]
repo = "https://github.com/yaak-ai/rmind"

[project.scripts]
rmind-export-onnx = "rmind.scripts.export_onnx:main"
rmind-predict = "rmind.scripts.predict:main"
rmind-train = "rmind.scripts.train:main"

[project.optional-dependencies]
predict = ["funcy>=2.0", "wandb>=0.24.2", "rbyte[visualize]"]
test = ["pytest>=8.4.1", "pytest-lazy-fixtures>=1.1.4"]
train = [
  "contextily>=1.6.2",
  "matplotlib>=3.10.3",
  "torchmetrics>=1.4.1",
  "wandb>=0.24.2",
]

[dependency-groups]
dev = [
  "better-exceptions>=0.3.3",
  "deptry>=0.23.1",
  "ipython",
  "lovely-tensors",
  "patdb",
  "pudb>=2025.1.5",
  "wat-inspector",
]
check = [
  "ruff>=0.15.0",
  "ty>=0.0.15",
]
export = [
  "onnx>=1.19.1",
  "onnxruntime>=1.23.1",
  "onnxscript>=0.5.3",
]
test = [
  "pytest>=8.4.1",
  "pytest-lazy-fixtures>=1.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.deptry.per_rule_ignores]
DEP001 = ["rmind"]
DEP002 = [
  "funcy",
  "torchmetrics",
  "pytest",
  "pytest-lazy-fixtures",
  "torchmetrics",
  "torchvision",
]
DEP003 = ["rmind"]

[tool.deptry.package_module_name_map]
hydra-core = "hydra"
tensordict-nightly = "tensordict"
pytorch-lightning = [
  "pytorch_lightning",
  "lightning_fabric",
  "lightning_utilities",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
preview = true
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "A001",
  "A002",
  "ANN401",
  "COM812",
  "CPY",
  "D",
  "DOC201",
  "E501",
  "N812",
  "PD",
  "TD",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = true

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
