[project]
name = "rmind"
version = "0.1.0"
description = "Foundation models for spatial intelligence"
readme = "README.md"
requires-python = ">=3.12, <3.13"
license-files = ["LICENSE.txt"]
authors = [{ name = "yaak ML team", email = "ml@yaak.ai" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "deepdiff>=9.0.0",
  "einops>=0.8.1",
  "hydra-core>=1.3.3",
  "jq>=1.11.0",
  "kornia>=0.8.2",
  "more-itertools>=10.4.0",
  "numpy>2.3.0",
  "omegaconf>=2.3.0",
  "orjson>=3.10.12",
  "polars>=1.41.2",
  "pydantic>=2.13.4",
  "pytorch-lightning>=2.6.5",
  "rbyte[geo,jpeg,yaak]==0.38.0",
  "structlog>=26.1.0",
  "tensordict>=0.13.0",
  "timm>=1.0.22",
  "torch>=2.12.1",
  "torchaudio>=2.11.0",
  "torchvision>=0.27.1",
]

[project.urls]
repo = "https://github.com/yaak-ai/rmind"

[project.scripts]
rmind-check-git = "rmind.scripts.check_git:main"
rmind-export-onnx = "rmind.scripts.export_onnx:main"
rmind-predict = "rmind.scripts.predict:main"
rmind-train = "rmind.scripts.train:main"

[project.optional-dependencies]
export = [
  "onnx>=1.22.0",
  "onnxruntime>=1.27.0",
  "onnxscript>=0.7.0",
]
predict = [
  "wandb>=0.27.2",
  "rbyte[video,visualize]",
  "torchcodec",  # transitive dependency of rbyte; only here so we can configure [tool.uv.sources.torchcodec] (https://github.com/astral-sh/uv/issues/8253)
  "onnxruntime>=1.27.0",
  "tensorrt-cu13==10.14.1.48.post1; sys_platform == 'linux'",
]
train = [
  "contextily>=1.6.2",
  "matplotlib>=3.10.3",
  "torchmetrics>=1.9",
  "wandb>=0.27.2",
]

[dependency-groups]
dev = [
  "better-exceptions>=0.3.3",
  "deptry==0.25.1",
  "ipython",
  "lovely-tensors",
  "patdb",
  "pudb>=2025.1.5",
  "wat-inspector",
]
check = [
  "ruff>=0.15.18",
  "ty>=0.0.52",
]
test = [
  "pytest>=9.0.2",
  "pytest-lazy-fixtures>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.deptry.per_rule_ignores]
DEP001 = ["rmind"]
DEP002 = [
  "funcy",
  "onnx",
  "onnxscript",
  "pytest",
  "pytest-lazy-fixtures",
  "tensorrt-cu13",
  "torchcodec",
  "torchmetrics",
  "torchvision",
]
DEP003 = ["rmind"]
DEP004 = [
  "onnxruntime",
  "tensorrt",
]

[tool.deptry.package_module_name_map]
hydra-core = "hydra"
tensordict-nightly = "tensordict"
pytorch-lightning = [
  "pytorch_lightning",
  "lightning_fabric",
  "lightning_utilities",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
preview = true
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "A001",
  "A002",
  "ANN401",
  "COM812",
  "CPY",
  "D",
  "DOC201",
  "E501",
  "N812",
  "PD",
  "PLW0717",
  "TD",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101", "S301", "S403"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = true

[tool.tombi]
files.exclude = ["uv.lock"]

[tool.ty.rules]
unused-ignore-comment = "warn"

[[tool.ty.overrides]]
include = ["src/rmind/inference/backends/tensorrt.py"]

[tool.ty.overrides.analysis]
allowed-unresolved-imports = ["tensorrt"]

[tool.uv]
constraint-dependencies = [
  "gitpython>=3.1.47",
  "pillow>=12.2.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

torchcodec = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
